2007-10-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoMakefileFormat.cs, MonoProject.cs: Make sure the .sources file is
	  included when exporting the project.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.addin.xml: Bump MD version.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDeveloperExtensions.addin.xml,
	  MonoDeveloperExtensions.mdp, NUnit/Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Commands.cs: Converted DispatchService to a static class.

2007-06-19  Ankit Jain  <jankit@novell.com>

	Fix bug#81901.
	* MonoProject.cs (AddSourceFile): Use File.* for file operations
	instead of FileService.
	(RemoveSourceFile): Likewise.

2007-05-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.addin.xml: Removed MS namespace from add-in
	  dependency.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDeveloperExtensions.mdp: Copy the .addins.xml file to the output
	  dir.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDeveloperExtensions.mdp: Reference shared assemblies
	  from the correct location.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDeveloperExtensions.addin.xml,
	  MonoDeveloperExtensions.mdp: Migration to Mono.Addins.

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoMakefileFormat.cs: Track api changes.
	* MonoDeveloperExtensions.mdp: Updated.

2007-03-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoMakefileFormat.cs: Save MonoProject and MonoCombine objects only.
	* MonoDeveloperExtensions.mdp, NUnit/NUnit.mdp: Disable local-copy
	  references.

2007-03-08  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* MonoTestProvider.cs: Removing as it was already moved to separate
	assembly.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* NUnit/NUnit.mdp: Set target runtime to 2.0.
